[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/give_out_floor.gd" type="Script" id=1]
[ext_resource path="res://Resorces/industrial.v2.png" type="Texture" id=2]
[ext_resource path="res://Resorces/Sounds/give_out_floors.wav" type="AudioStream" id=3]



[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 48, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 176, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.55225, 6.29797 )

[node name="give_out_floor" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "fall"
flip_v = true

[node name="hit_player" type="Area2D" parent="."]
position = Vector2( 3.8147e-06, -0.58992 )
collision_layer = 5
collision_mask = 95

[node name="hit_player" type="CollisionShape2D" parent="hit_player"]
position = Vector2( 3.8147e-06, 1.36646 )
shape = SubResource( 6 )

[node name="stop_player" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 69

[node name="stop_player" type="CollisionPolygon2D" parent="stop_player"]
visible = false
position = Vector2( 0.00142735, -0.441944 )
scale = Vector2( 0.900013, 1 )
polygon = PoolVector2Array( -8.2732, -7.83857, 8.23159, -7.79174, 8.30182, 7.51909, -8.24979, 7.5425 )
disabled = true

[node name="falling" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -16.155
pitch_scale = 2.94
[connection signal="body_exited" from="hit_player" to="." method="_on_stop_player_body_exited"]
